[project]
name = "bv_nodepack"
version = "0.0.5"
description = "A ComfyUI node pack providing a growing set of utility and workflow nodes, including a flexible config-driven Pipe system."
authors = [
  {name = "BlackVortex", email = "blackvortexx@proton.me"}
]
readme = "README.md"
license = {text = "GNU General Public License v3"}


[project.urls]
Repository = "https://github.com/BlackVortexAI/bv_nodepack"
BugTracker = "https://github.com/BlackVortexAI/bv_nodepack/issues"
Documentation = "https://github.com/BlackVortexAI/bv_nodepack/wiki"


[tool.comfy]
PublisherId = "blackvortex"
DisplayName = "BV-NodePack"
Icon = ""
