[project]
name = "bv_nodepack"
version = "0.0.6"
description = "A ComfyUI node pack with utility and workflow nodes: a flexible config-driven Pipe system plus Subgraph-friendly UI nodes (Heading, Spacer, Divider) with dynamic JavaScript rendering."
authors = [
  {name = "BlackVortex", email = "blackvortexx@proton.me"}
]
readme = "README.md"
license = {text = "GNU General Public License v3"}


[project.urls]
Repository = "https://github.com/BlackVortexAI/bv_nodepack"
BugTracker = "https://github.com/BlackVortexAI/bv_nodepack/issues"
Documentation = "https://github.com/BlackVortexAI/bv_nodepack/wiki"


[tool.comfy]
PublisherId = "blackvortex"
DisplayName = "BV-NodePack"
Icon = ""
