[project]
name = "bv_nodepack"
version = "0.0.13"
description = "A ComfyUI node pack providing advanced utility and workflow nodes, including a config-driven Control Center for muting and bypassing node groups, a flexible Pipe system, and Subgraph-friendly UI nodes (Heading, Spacer, Divider) with dynamic JavaScript rendering."
authors = [
  {name = "BlackVortex", email = "blackvortexx@proton.me"}
]
readme = "README.md"
license = {text = "GNU General Public License v3"}


[project.urls]
Repository = "https://github.com/BlackVortexAI/bv_nodepack"
BugTracker = "https://github.com/BlackVortexAI/bv_nodepack/issues"
Documentation = "https://github.com/BlackVortexAI/bv_nodepack/wiki"


[tool.comfy]
PublisherId = "blackvortex"
DisplayName = "BV-NodePack"
Icon = ""
